# ipc

./: CMakeLists.txt  conanfile.py
include/ipc/: SharedMemory.h  SharedMemoryWindows.h
src/: SharedMemory.cpp
src/cli/meggitt/: Meggitt.cpp  MeggittData.cpp  MeggittData.h  MeggittMessages.h
src/cli/sumer/: Sumer.cpp  SumerData.cpp  SumerData.h  SumerMessages.h
